re-enabled search equality checks